# jelly

./: .gitignore  CMakeLists.txt  Makefile  configure  release.sh
bench/: CMakeLists.txt  ackerman.jelly  ackerman.lua  bench.py  binary_trees.jelly  binary_trees.lua  fannkuch.jelly  fannkuch.lua  fib.jelly  fib.lua  fp.jelly  fp.lua  jelly_bench.c  jlyb_dump.py  module.jelly  module.lua  nbodies.jelly  nbodies.lua  nsieve.jelly  nsieve.lua  recursive.jelly  recursive.lua  repl_bench.py  startup.lua  tail_sum.jelly  tail_sum.lua  test_ops.jelly  test_ops.lua
ctest/: CMakeLists.txt  bytecode_loader_tests.c  cli_fixture_writer.c  closure_call.jelly  jellyc_jelly_test.c  jellyc_prelude_smoke.c  strutil_tests.c  vm_exec_tests.c
ctest/array/: bytes_ops.jelly  index_sugar.jelly  index_sugar_i16_index.jelly  index_sugar_i8_index.jelly
ctest/assert/: caught.jelly  uncaught.jelly
ctest/atom/: literal_get.jelly
ctest/block/: expr.jelly
ctest/bool/: and_direct.jelly  and_or.jelly  basic.jelly  eq_truthy.jelly  let_and_direct.jelly  let_if_and.jelly  let_if_const.jelly  minimal_and.jelly  shortcircuit_minimal.jelly  shortcircuit_simple.jelly  shortcircuit_trap.jelly  var_and_call.jelly  var_and_safe.jelly
ctest/bytes/: concat_many.jelly  eq.jelly  hello.jelly  index_sugar_i16_index.jelly  interp_basic.jelly  interp_block.jelly  interp_many.jelly  interp_mixed_numeric.jelly  interp_order.jelly  slice.jelly  to_bytes_builtin.jelly  unicode_escape.jelly
ctest/call/: basic.jelly  callee_expr.jelly  in_while.jelly  in_while_no_call.jelly  large_arity.jelly  simple_if.jelly
ctest/const/: assign_fails.jelly  basic_fold.jelly  bytes_alias.jelly
ctest/errors/: implicit_narrow_i32_to_i8.jelly
ctest/expr/: let_in_if.jelly
ctest/float/: is_nan_is_infinite.jelly
ctest/fn/: capture_no_params.jelly  capture_raw_caps.jelly  infer_ackerman.jelly  infer_nested_fn_capture_and_param.jelly  infer_outer_typed_fun_call_widen_arg.jelly  infer_param_bool_and_or.jelly  infer_param_bytes_concat.jelly  infer_param_numeric_add.jelly
ctest/function/: body_locals.jelly  closure_capture.jelly  return_void.jelly  tail_expr.jelly
ctest/i32/: cond.jelly  lt.jelly  relops.jelly  unary_neg.jelly
ctest/if/: basic.jelly  join.jelly
ctest/match/: array_exact.jelly  array_head_tail.jelly  array_prefix_rest.jelly  array_wildcard.jelly  basic.jelly  bind.jelly  dynamic_scalar.jelly  fallthrough_when.jelly  fallthrough_when_no_expr.jelly  list_head_tail.jelly  object_own_only_proto.jelly  object_pin.jelly  object_wildcard.jelly  tuple_basic.jelly  tuple_wildcard.jelly
ctest/module/: consts.jelly  main.jelly  math.jelly  named_imports.jelly  reexport.jelly
ctest/numeric/: arith_interchangeable.jelly  chained_eq_numeric.jelly  div_float_implicit.jelly  div_i32_f32.jelly  div_int_implicit.jelly  div_mixed_int_float.jelly  literal_suffixes.jelly  mixed_sub_f64_i64.jelly  mod_basic.jelly  shift_basic.jelly  small_type_arith.jelly
ctest/object/: across_fn.jelly  add_member.jelly  assign.jelly  dynamic_access.jelly  get.jelly  literal.jelly  method_call_this.jelly  method_const_fun.jelly  new_calls_init.jelly  new_calls_init_args.jelly  new_template_proto_infer.jelly  new_template_proto_infer_var.jelly  new_template_proto_init.jelly  prototype_as_type.jelly  prototype_delegation.jelly  prototype_sugar_basic.jelly  prototype_sugar_template.jelly  prototype_syntax_basic.jelly  prototype_syntax_template.jelly  template_ops.jelly  template_runtime_metadata.jelly
ctest/recursion/: basic.jelly  tail.jelly  tail_mutual.jelly
ctest/syntax/: haxe.jelly
ctest/try-catch/: basic.jelly  minimal.jelly
ctest/tuple/: basic.jelly  eq.jelly
ctest/while/: break_continue.jelly  countdown.jelly  do_while.jelly  do_while_break_continue.jelly
ctest/with/: basic.jelly  exhaustive_else.jelly  first_fails.jelly  no_else.jelly  second_fails.jelly
docs/: CLI.md  ISA.md  boxing.md  call-abi.md  call_abi.md  codegen.md  compiler_architecture.md  error-model.md  errors.md  hashlink-operator-notes.md  ir.md  jellyc.md  language.md  language_coverage_checklist.md  match-block.md  performance.md  prototyping.md  repl_incremental.md  repl_incremental_plan.md  small_numeric_types.md  types.md  vm_architecture.md  vm_exec_loop.md
jellyc/: Cargo.toml  README.md  build.rs
jellyc/src/: ast.rs  builtin_constraints.rs  compile.rs  error.rs  frontend.rs  ir.rs  ir_codegen.rs  jlyb.rs  lex.rs  link.rs  lower.rs  main.rs  peephole.rs  phi.rs  regalloc.rs  repl.rs  resolve.rs  source.rs  templates.rs  tests.rs  token.rs  typectx.rs  vm.rs
jellyc/src/builtin_constraints/: array.rs  list.rs  misc.rs  object.rs
jellyc/src/codegen/: allocate.rs  call_abi.rs  cfg.rs  entry.rs  finalize.rs  mod.rs  model.rs  (+4 more)
snapshots/: hir_basic.snap  hir_closure_capture.snap  hir_dynamic_numeric.snap  hir_match.snap  hir_match_dynamic_scalar.snap  hir_method_bind_this.snap  hir_module_namespace_call.snap  hir_new_init.snap  hir_new_nominal.snap  hir_object_get_context_vs_type_arg.snap  hir_truthiness.snap  hir_try.snap  hir_tuple_access.snap  ir_basic.snap  ir_match.snap  ir_match_dynamic_scalar.snap  ir_method_bind_this.snap  ir_module_namespace_call.snap  ir_new_init.snap  ir_new_nominal.snap  ir_object_get_context_vs_type_arg.snap  ir_try.snap  ir_tuple_access.snap
vm/: CMakeLists.txt  Makefile
vm/cmake/: CompilerWarnings.cmake  Sanitizers.cmake
vm/include/: jelly.h
vm/include/jelly/: abstract.h  array.h  box.h  bytecode.h  bytes.h  check.h  function.h  gc.h  list.h  loader.h  object.h  type.h  value.h  vm.h
vm/src/: gc.c  main.c  vm.c
vm/src/bytecode/: check.c  loader.c
vm/src/include/: jelly.h
vm/src/include/jelly/: check.h  internal.h
vm/src/include/jelly/internal/: vm_internal.h
vm/src/types/: abstract.c  array.c  box.c  bytes.c  function.c  list.c  object.c  strutil.c
vm/src/vm/: box.c  call.c  exc.c  frame.c  interp.c  profile.c  reg.c  spill.c
vm/src/vm/ops/: dispatch.c  exec_loop.c  ops_arith.c  ops_array.c  ops_box.c  ops_builtins.c  ops_bytes.c  ops_call.c  ops_const.c  ops_control.c  ops_list.c  ops_obj.c
(+334 files in other folders)
